# BackTestingFramework

./: .gitignore  CURRENCY_CONVERSION_README.md  DATA_LEAKAGE_AUDIT.md  EXCEL_REPORTING_GUIDE.md  INDICATOR_REFACTOR.md  OPTIMIZATION_GUIDE.md  PERFORMANCE_GUIDE.md  README.md  STRATEGY_TESTING_SUMMARY.md  Testing of the Back Testing Framework.docx  alphatrend_explorer.py  alphatrend_indicators_AAPL_20251129_192557.csv  alphatrend_trade_comparison.xlsx  backtest.py  backtest_framewrok.py  backtest_gui.py  benchmark_performance.py  compare_alphatrend_trades.py  ctk_backtest_gui.py  ctk_data_prep_gui.py  ctk_edge_analysis_gui.py  ctk_factor_analysis_gui.py  ctk_main_gui.py  ctk_modelling_evaluation_gui.py  ctk_monte_carlo_gui.py  ctk_optimization_gui.py  ctk_pattern_analysis_gui.py  ctk_rule_tester_gui.py  ctk_univariate_optimization_gui.py  ctk_vulnerability_gui.py  ctk_vulnerability_visualizer_gui.py  data_collection_gui.py  debug_signals.py  debug_strategy.py  export_alphatrend_indicators.py  generate_excel_report.py  optimization_gui.py  optimize_gui.py  pattern_analysis_report.xlsx  process_chart_exports.py  (+15 more)
Classes/: BacktestEngine.py  BaseStrategy.py  DataPreparation.py  MovingAverageCrossStrategy.py  Signal.py  Trade.py  TradingViewMultiPresetStrategy.py  _version.py
apps/: alphatrend_explorer.py  backtest_gui.py  data_collection_gui.py  modelling_dashboard.py  optimization_gui.py  vulnerability_gui.py
backtesting/: __init__.py
btf/: __init__.py  __main__.py  commands.py
config/: benchmarks.json  config.json  optimization_config.yaml  security_metadata.json  strategy_config.py  strategy_parameters.json  trade_analysis_config.json
currency_rates/: USDGBP.csv
docs/: BACKTEST_ANALYSIS_GUIDE.md  CENTRALIZED_PERFORMANCE_METRICS.md  CONFIGURATION.md  DASHBOARD_GUIDE.md  DATA_COLLECTION_GUIDE.md  DATA_PREPARATION.md  FACTOR_ANALYSIS.md  FUNDAMENTAL_DATA_GUIDE.md  GUI_SPECIFICATION.md  Home.md  MODELLING_DATA_DICTIONARY.md  MODELLING_EVALUATION.md  MODELLING_USER_GUIDE.md  OPTIMIZATION.md  PORTFOLIO_MODE.md  README.md  SECURITIES.md  STRATEGIES.md  STRATEGY_TESTING_ANALYSIS.md  SYSTEM_EVALUATION.md  TOOLS.md  USER_GUIDE.md  VULNERABILITY_SCORING_GUIDE.md  (+4 more)
raw_data/: ADI.csv  (+222 more)
(+4876 files in other folders)
